# agentic-patterns

./: README.md  crewai_flow.html  pyproject.toml  response.txt
src/agentic_patterns/: chain_of_though.py  routing_flow.py
